<resources>
    <string name="app_name">ImFitPlus</string>
    <string name="welcome_message">Descubra seu perfil de saúde e receba recomendações personalizadas</string>
    <string name="start_button_text">Comece aqui</string>
    <string name="personal_data_title">Insira seus dados</string>
    <string name="name">Nome</string>
    <string name="age">Idade</string>
    <string name="height">Altura (m)</string>
    <string name="weight">Peso (kg)</string>
    <string name="calcular_imc">Calcular IMC</string>
    <string name="birth_date">Data de nascimento</string>

    <string-array name="activity_levels">
        <item>Selecione</item>
        <item>Sedentário</item>
        <item>Leve</item>
        <item>Moderado</item>
        <item>Intenso</item>
    </string-array>
</resources>